--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -124,65 +124,65 @@ html {
         }
       }
     }
+  }
 
-    main {
-      animation: swipeFromRight 1s ease-out;
-      margin: 18rem auto;
-      width: 100%;
-      padding: 1.25rem 0;
+  main {
+    animation: swipeFromRight 1s ease-out;
+    margin: 18rem auto;
+    width: 100%;
+    padding: 1.25rem 0;
 
-      .align_objects {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        margin: 0 auto;
-        max-width: 70%;
+    .align_objects {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      margin: 0 auto;
+      max-width: 70%;
 
-        .text-container {
-          max-width: 80%;
+      .text-container {
+        max-width: 80%;
 
-          h1 {
-            font-size: clamp(1.5rem, 10vw, 4rem);
-            animation: fadeIn 0.6s ease-in;
-            color: rgb(255, 255, 255);
-            line-height: 1.4;
+        h1 {
+          font-size: clamp(1.5rem, 10vw, 4rem);
+          animation: fadeIn 0.6s ease-in;
+          color: rgb(255, 255, 255);
+          line-height: 1.4;
 
-            span {
-              color: #908282;
-            }
+          span {
+            color: #908282;
           }
         }
+      }
 
-        .btn-container {
-          display: flex;
-          flex-direction: row;
-          margin: 2rem 0;
-          animation: fadeIn 1s ease-in;
+      .btn-container {
+        display: flex;
+        flex-direction: row;
+        margin: 2rem 0;
+        animation: fadeIn 1s ease-in;
 
-          .important {
-            color: black;
-            background-color: rgb(255, 255, 255);
-          }
+        .important {
+          color: black;
+          background-color: rgb(255, 255, 255);
+        }
 
-          a {
-            z-index: 2;
-            animation: swipeFromLeft 0.5s ease-in;
-            transition: 0.3s;
-            color: rgb(207, 207, 207);
-            border: solid 0.01rem #908282;
-            padding: 0.5rem 1.2rem;
-            font-size: 1rem;
-            text-transform: uppercase;
-            letter-spacing: 0.5rem;
-            margin-right: 0.5rem;
-          }
+        a {
+          z-index: 2;
+          animation: swipeFromLeft 0.5s ease-in;
+          transition: 0.3s;
+          color: rgb(207, 207, 207);
+          border: solid 0.01rem #908282;
+          padding: 0.5rem 1.2rem;
+          font-size: 1rem;
+          text-transform: uppercase;
+          letter-spacing: 0.5rem;
+          margin-right: 0.5rem;
+        }
 
-          a:hover {
-            transition: 0.5s;
-            color: rgb(255, 255, 255);
-            background-color: #908282;
-            transition: opacity 0.2s, border 0.3s;
-          }
+        a:hover {
+          transition: 0.5s;
+          color: rgb(255, 255, 255);
+          background-color: #908282;
+          transition: opacity 0.2s, border 0.3s;
         }
       }
     }
@@ -420,7 +420,7 @@ html {
             input {
               margin: 1rem 0;
               background-color: transparent;
-              padding: 1rem .5rem;
+              padding: 1rem 0.5rem;
               border: solid 0.01rem #908282;
               color: white;
               font-size: 1.2rem;
@@ -432,8 +432,8 @@ html {
               border: solid 0.01rem #908282;
               color: white;
               background-color: transparent;
-              font-size: 1.2rem .5rem;
-              padding: 1rem .5rem;
+              font-size: 1.2rem 0.5rem;
+              padding: 1rem 0.5rem;
             }
           }
           #netlify {
@@ -511,29 +511,29 @@ button:focus {
         }
       }
     }
+  }
 
-    main {
-      padding: 0rem !important;
-      margin: 8.5rem 0 !important;
-      .align_objects {
-        .text-container {
-          max-width: 100% !important;
+  main {
+    padding: 0rem !important;
+    margin: 8.5rem 0 !important;
+    .align_objects {
+      .text-container {
+        max-width: 100% !important;
 
-          h1 {
-            font-weight: bold;
-            font-size: 2.5rem !important;
-          }
+        h1 {
+          font-weight: bold;
+          font-size: 2.5rem !important;
         }
+      }
 
-        .btn-container {
-          justify-content: left;
-          align-items: left;
-          flex-direction: row !important;
-          max-width: 100% !important;
+      .btn-container {
+        justify-content: left;
+        align-items: left;
+        flex-direction: row !important;
+        max-width: 100% !important;
 
-          a {
-            margin-top: 0.5rem;
-          }
+        a {
+          margin-top: 0.5rem;
         }
       }
     }
@@ -632,29 +632,29 @@ button:focus {
         }
       }
     }
+  }
 
-    main {
-      padding: 0rem !important;
-      margin: 8.5rem 0 !important;
-      .align_objects {
-        .text-container {
-          max-width: 100% !important;
+  main {
+    padding: 0rem !important;
+    margin: 8.5rem 0 !important;
+    .align_objects {
+      .text-container {
+        max-width: 100% !important;
 
-          h1 {
-            font-weight: bold;
-            text-align: left;
-            font-size: 2rem !important;
-          }
+        h1 {
+          font-weight: bold;
+          text-align: left;
+          font-size: 2rem !important;
         }
+      }
 
-        .btn-container {
-          justify-content: flex-start;
-          flex-direction: column !important;
-          max-width: 100% !important;
+      .btn-container {
+        justify-content: flex-start;
+        flex-direction: column !important;
+        max-width: 100% !important;
 
-          a {
-            margin-top: 0.5rem;
-          }
+        a {
+          margin-top: 0.5rem;
         }
       }
     }
@@ -723,258 +723,3 @@ button:focus {
     }
   }
 }
-
-/* @media screen and (max-width: 1200px) {
-  body {
-    transition: all 0.2s;
-  }
-
-  .container {
-    header {
-      main {
-        .text {
-          h1 {
-            font-size: 5.5vw;
-          }
-        }
-
-        .btn-container {
-          a {
-            font-size: 2vw;
-          }
-        }
-      }
-    }
-    section {
-      aside {
-        .text {
-          h3 {
-            font-size: 5vw;
-          }
-
-          p {
-            font-size: 2.5vw;
-          }
-        }
-      }
-      article {
-        .text {
-        }
-
-        .card {
-          display: block;
-          padding: 0;
-          width: 100%;
-
-          .info {
-            max-width: 100%;
-
-            p {
-              font-size: 1.4rem;
-            }
-
-            .technologies-container {
-              justify-content: flex-start;
-            }
-
-            .btn-container {
-              margin: 1rem 0;
-              justify-content: flex-start;
-            }
-          }
-
-          .img {
-            max-width: 100%;
-          }
-        }
-      }
-      footer {
-        display: block;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  body {
-    transition: all 0.3s;
-  }
-
-  .container {
-    padding: 0;
-    margin: 0;
-
-    header {
-      nav {
-        ul {
-          display: none;
-        }
-
-        img {
-          display: flex;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 600px) {
-  body {
-    transition: all 0.2s;
-  }
-
-  .container {
-    header {
-      nav {
-        padding: 3.5vw 1vw;
-        a {
-          h1 {
-            font-size: 5vw;
-          }
-        }
-      }
-
-      main {
-        justify-content: center;
-        padding: 1rem 0;
-        margin: 15vw 1rem;
-
-        .text {
-          padding: 0;
-          h1 {
-            font-weight: normal;
-            text-align: left;
-            font-size: 8vw;
-          }
-        }
-
-        .btn-container {
-          margin: 1rem 0;
-          justify-content: flexstart;
-
-          a {
-            font-size: 3.5vw;
-            margin: 0 0.3rem;
-            padding: 1.5vw 4vw;
-          }
-        }
-      }
-    }
-
-    section {
-      aside {
-        justify-content: center;
-        padding: 1rem 0;
-        max-width: inherit;
-        margin: 15vw 1rem;
-
-        .text {
-          padding: 0;
-
-          h3 {
-            font-size: 8vw;
-            font-weight: normal;
-            line-height: 1.25;
-          }
-
-          p {
-            font-size: 5vw;
-            text-align: left;
-            font-weight: normal;
-
-            i {
-              font-size: 3rem;
-            }
-          }
-        }
-      }
-
-      article {
-        justify-content: center;
-        padding: 1rem 0;
-        margin: 15vw 1rem;
-
-        .text {
-          padding: 0;
-
-          h2 {
-            font-size: 8vw;
-            font-weight: normal;
-            line-height: 1.25;
-          }
-        }
-
-        .card {
-          padding: 0;
-
-          .info {
-            padding: 1rem;
-            h1 {
-              padding: 0;
-              font-size: 9vw;
-              text-align: left;
-              font-weight: normal;
-            }
-
-            p {
-              font-size: 4vw;
-            }
-
-            .btn-container {
-              margin: 2rem auto;
-
-              a {
-                margin: 0 0.5vw;
-                padding: 2vw 5vw;
-                font-size: 4vw;
-                letter-spacing: 0.3;
-              }
-            }
-          }
-
-          img {
-            width: 100%;
-          }
-        }
-      }
-      footer {
-        padding: 1rem 0;
-        margin: 15vw 1rem;
-
-        .text {
-          padding: 0;
-
-          h2 {
-            font-size: 8vw;
-          }
-        }
-
-        form {
-          max-width: 100%;
-          padding: 0;
-
-          .form-container {
-            .field {
-              label {
-                font-size: 6vw;
-              }
-
-              input {
-                width: 100%;
-              }
-
-              textarea {
-                width: 100%;
-              }
-            }
-
-            input[type="submit"] {
-              width: 100%;
-            }
-          }
-        }
-      }
-    }
-  }
-}
- */
