--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -632,7 +632,13 @@ html {
   padding: 0 1rem;
 }
 
-.container section .contact .links i {
+.container section .contact .links a {
+  color: #e6e6e6;
+  text-transform: uppercase;
+  margin-right: 1.5rem;
+}
+
+.container section .contact .links a i {
   margin: 1rem 0.8rem;
   color: white;
   font-size: 2.5rem;
