--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -127,7 +127,7 @@ html {
             flex-direction: column;
             text-transform: uppercase;
             a {
-              font-size: 2.5rem;
+              font-size: 2rem;
               align-items: center;
               transition: 0.4s ease-out;
               letter-spacing: 0.2rem;
@@ -667,15 +667,15 @@ button:focus {
         }
       }
 
-      .active-navmenu {
-        display: block !important;
+      .nav_menu {
+        display: none;
       }
     }
   }
 
   main {
     padding: 0rem !important;
-    margin: 8.5rem 0 !important;
+    margin: 5.5rem 0 !important;
     .align_objects {
       .text-container {
         max-width: 100% !important;
