--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,15 +1,15 @@
 body {
-  background-color: #0e0e0e;
+  background-color: #0b0c0bfa;
   background-image: url("/assets/svg/background.svg");
+  background-size: cover;
   background-repeat: no-repeat;
-  transition: 0.5s;
   font-family: "Poppins", sans-serif;
 }
 
 #resume-container {
   a {
     z-index: 2;
-    animation: swipeFromLeft 0.5s ease-in;
+    animation: swipeFromLeft 1.5s ease-in;
     transition: 0.3s;
     color: rgb(20, 20, 20);
     border: solid 0.01rem #ffffff;
@@ -50,7 +50,6 @@ html {
 
   header {
     .navbar {
-      animation: swipeFromLeft 1s ease-out;
       z-index: 999;
       background-color: rgba(12, 12, 12, 0.971);
       top: 0;
@@ -151,7 +150,7 @@ html {
 
   main {
     animation: swipeFromRight 1s ease-out;
-    margin: 18rem auto;
+    margin: 20.5rem auto;
     width: 100%;
     padding: 1.25rem 0;
 
@@ -163,13 +162,14 @@ html {
       max-width: 70%;
 
       .text-container {
-        max-width: 80%;
+        width: 80%;
 
         h2 {
           font-size: clamp(1.5rem, 10vw, 4rem);
-          animation: fadeIn 0.6s ease-in;
+          animation: fadeIn .6s ease-in;
           color: rgb(255, 255, 255);
           line-height: 1.4;
+          font-weight: bold;
 
           span {
             color: #908282;
@@ -199,13 +199,13 @@ html {
           text-transform: uppercase;
           letter-spacing: 0.5rem;
           margin-right: 0.5rem;
-        }
 
-        a:hover {
-          transition: 0.5s;
-          color: rgb(255, 255, 255);
-          background-color: #908282;
-          transition: opacity 0.2s, border 0.3s;
+          &:hover {
+            transition: 0.4s;
+            color: rgb(255, 255, 255);
+            background-color: #908282;
+            transition: opacity 0.2s, border 0.3s;
+          }
         }
       }
     }
@@ -222,7 +222,7 @@ html {
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        margin: 0 auto;
+        margin: 10rem auto;
         max-width: 70%;
 
         .text-container {
@@ -258,23 +258,23 @@ html {
           i {
             color: rgb(206, 206, 206);
             font-size: 3.5rem;
-            margin-right: 0.5rem;
+            margin-right: 1rem;
           }
 
           .fa-html5 {
-            color: #e46329;
+            color: #b8b6b6;
           }
           .fa-css3-alt {
-            color: #28a7df;
+            color: #b8b6b6;
           }
           .fa-sass {
-            color: #c76599;
+            color: #b8b6b6;
           }
           .fa-react {
-            color: #00d9ff;
+            color: #b8b6b6;
           }
           .fa-node-js {
-            color: #83cd29;
+            color: #b8b6b6;
           }
         }
       }
@@ -290,7 +290,7 @@ html {
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        margin: 0 auto;
+        margin: 10rem auto;
         max-width: 70%;
 
         .text-container {
@@ -405,7 +405,7 @@ html {
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        margin: 0 auto;
+        margin: 10rem auto;
         max-width: 70%;
 
         .text-container {
