--- a/assets/css/animations.module.css
+++ b/assets/css/animations.module.css
@@ -89,4 +89,4 @@
             transform: translateY(0);
   }
 }
-/*# sourceMappingURL=anim.index.css.map */
+/*# sourceMappingURL=animations.module.css.map */
